# elifine-com

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  mutex_queue
.devcontainer/: Dockerfile  create-aws-profile.sh  devcontainer.json  docker-compose.yml  install-ci-tooling.sh  install-pulumi-cli.sh  manual-setup-deps.sh  on-create-command.sh  post-start-command.sh
.github/actions/install_deps_uv/: install-ci-tooling.ps1
.github/actions/pulumi_ephemeral_deploy/: action.yml
.github/workflows/: ci.yaml  pulumi-aws.yml
elifine_app/: app.config.ts  eslint.config.mjs  global.d.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
elifine_app/app/layouts/: default.vue
elifine_app/app/pages/: about.vue  contact.vue  index.vue  open-source.vue  yardwork-1530-walker-st.vue  yardwork.pdn
elifine_app/app/utils/: links.ts
elifine_app/layouts/: default.vue
elifine_app/pages/: about.vue  contact.vue  index.vue  yardwork-1530-walker-st.vue
infrastructure/: pyproject.toml
infrastructure/src/infrastructure/: jinja_constants.py  program.py  pulumi_deploy.py
