[project]
name = "infrastructure"
version = "0.1.0"
description = "Infrastructure to support frontend and backend"

readme = "README.md"
requires-python = ">=3.12.7"

dependencies = [
    # Specific to this project

    # Managed by upstream template
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.16.0",
    "pulumi>=3.147.0",
    "pulumi-aws>=6.66.3",
    "pulumi-aws-native>=1.24.0",
    "pulumi-command>=1.0.1",
    "boto3>=1.36.3",
    "boto3-stubs[all]>=1.36.3",
]

[tool.uv]
package = true
