[project]
name = "infrastructure"
version = "0.1.0"
description = "Infrastructure to support frontend and backend"

readme = "README.md"
requires-python = ">=3.12.7"

dependencies = [
    # Specific to this project

    # Managed by upstream template
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.16.0",
    "pulumi>=3.160.0",
    "pulumi-aws>=6.74.0",
    "pulumi-aws-native>=1.26.0",
    "pulumi-command>=1.0.2",
    "boto3>=1.37.11",
    "boto3-stubs[all]>=1.37.11",
]

[tool.uv]
package = true
